--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,13 @@
 body {
   font-family: sans-serif;
 }
+h1 {
+  text-align: center;
+}
+table.center {
+  margin-left: auto;
+  margin-right: auto;
+}
 
 td {
   height: 100px;
@@ -9,9 +16,11 @@ td {
   font-size: 70px;
   text-align: center;
 }
-
-#app {
-  width: 112px;
+.reset {
+  text-align: center;
+}
+.win {
+  width: 107px;
   height: 47px;
-  border-bottom: 1px solid black;
+  border-bottom: 2px solid black;
 }
